adding more stuff

--- a/src/tests/resources/com/company/seleniumframework/functional/SampleFunctionalTest.properties
+++ b/src/tests/resources/com/company/seleniumframework/functional/SampleFunctionalTest.properties
@@ -1,4 +1,8 @@
 # this properties file contains any elements that you want to store.  since CSS is more than sufficient, you should default with that.
 
-google.txtSearch = input[name='q']
-google.btnSearch = button[name='btnG']
+click = div#click
+setText = div#setText > input
+radio.1 = input[type='radio']#radio1
+radio.2 = input[type='radio']#radio2
+
+select = select#select
